# src/middlewares/validation.js
@@ -4,7 +4,11 @@ const { celebrate, Joi } = require('celebrate');
 const createUserValidation = celebrate({
   body: Joi.object().keys({
     password: Joi.string().required().min(4),
-    userName: Joi.string().required().min(2).max(20),
+    userName: Joi.string()
+      .required()
+      .min(2)
+      .max(20)
+      .regex(/^[a-zA-Z0-9]+$/i),
   }),
 });
 
@@ -18,7 +22,6 @@ const signinValidation = celebrate({
 // validators for /posts route
 const createPostValidation = celebrate({
   body: Joi.object().keys({
-    userName: Joi.string().required().min(1),
     text: Joi.string().required().min(2).max(200),
   }),
 });
